@@ -1,3 +1,5 @@
+HEAD
+	+ Bugfix: don't add deleted snort rules
 1.3.6
 	+ Bugfix: don't try to start snort if there are no valid interfaces selected
 1.3.3
